fix user page img align direction

--- a/mern/client/src/components/css/ModelCardv2.css
+++ b/mern/client/src/components/css/ModelCardv2.css
@@ -1,24 +1,28 @@
 .card-container {
+  align-items: center;
   width: 220px;
   background-color: #fff;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin: 20px;
   overflow: hidden;
-  text-align: center;
   position: relative;
   height: auto; 
   padding-bottom: 20px;
+  align-items: center;
+  
 }
-
-
+.hero-image-container{
+  display: flex;
+  justify-content: center;  /* 水平居中内容 */
+  width: 100%;  
+}
 .model-image {
   width: 150px;
   height: 150px;
   object-fit: cover;
   cursor: pointer;
-  text-align: center;
-  margin-top: 20px;
+  margin-top: 20px; 
 }
 
 .main-content {
